🔒 CRITICAL SECURITY FIX: Remove real credentials from .env.example
- Updated .env.example with template values only
- Removed real database URL and JWT secret
- Added proper documentation for environment setup
- .env file removed from git tracking

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
-# Database
-DATABASE_URL="postgresql://neondb_owner:npg_crNDLY81TRVH@ep-curly-hat-adfh3qd8-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+# Database Configuration
+# Replace with your PostgreSQL database URL
+DATABASE_URL="postgresql://username:password@localhost:5432/connecthub"
 
-# JWT
-JWT_SECRET="QJ&k9p!zF5xL@v2yG$uP#cHbE%w7sR4d"
+# JWT Security
+# Generate a secure random string for production
+JWT_SECRET="your-super-secret-jwt-key-here-make-it-long-and-random"
 
-# Server
+# Server Configuration
 PORT=3001
 NODE_ENV=development
